Create initial form and frontend functionality to add new doctor
Create NewDoctor and doctorApiService to post a new doctor. Add button to Doctors page to navigate to new-doctor page, and add according Route to App.js. Add font to index.css. Install styled-components.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,500;1,100&display=swap');
+
 html,
 body {
 	margin: 0;
@@ -5,4 +7,5 @@ body {
 
 * {
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
